[HandWritten] html: add background, since Mathjax cause overflow; fix color-scheme

--- a/_sass/dark.scss
+++ b/_sass/dark.scss
@@ -8,6 +8,10 @@ $grey-color-light: lighten($grey-color, 40%) !default;
 $grey-color-dark: darken($grey-color, 25%) !default;
 
 @import "moving/commondef";
+html.dark { /* html is not a descend child of .dark */
+        color-scheme: dark;
+        background-color: black; /* Needed for overflows */
+}
 .dark {
 @import "moving/base-dark";
 @import "moving/layout-dark";
