--- a/_sass/moving/_base-dark.scss
+++ b/_sass/moving/_base-dark.scss
@@ -1,9 +1,6 @@
 /**
  * Basic styling
  */
-html {
-	color-scheme: dark;
-}
 body {
 	color: $text-color;
 	background-color: $background-color;
