--- a/_sass/moving/_base-light.scss
+++ b/_sass/moving/_base-light.scss
@@ -1,9 +1,6 @@
 /**
   * Basic styling
   */
-html {
-	color-scheme: light;
-}
 body {
 	color: $text-color;
 	background-color: $background-color;
